# devrant-haskell

./: .gitignore  README.md  devrant.cabal  stack.yaml
.stack-work/install/x86_64-linux/ghc-8.0.1/8.0.1/flag-cache/: aeson-1.1.0.0-2ndlG8WLxEf3tTAmkmkTAt  asn1-encoding-0.9.4-I3pL4k5quBJIDSsjS3xgSX  asn1-parse-0.9.4-6frCBZ7wx43HUPuxtHsj0C  asn1-types-0.3.2-Ge9r4mjT9gqKvh3HYDUZpM  async-2.1.1-xFiBzw9xoB8HPZAuxUY2o  attoparsec-0.13.1.0-3Yc01HP7t3tGC3AH52n5aT  base-compat-0.9.1-tmPpmtbHbvIDjFWbkjGrR  base64-bytestring-1.0.0.1-In9M41tLtcS9QYt3QpGpNY  blaze-builder-0.4.0.2-LfJHtaLjD4FC6u7q2ZoVsA  byteable-0.1.1-15aIBCArSOBEnGxArzrDTM  case-insensitive-1.2.0.7-LntjUIkE2e8LTsVqqpgI18  cereal-0.5.4.0-2FJYHGgtE5C3SxaZjt25xS  conduit-1.2.8-5fgvzhyiRP8I8gw0elzssW  conduit-extra-1.1.15-LHeaW5NbDP9In4j6ZEwQBL  connection-0.2.6-FA6fCE44nC6IwhVHmBKrO5  cookie-0.4.2.1-F0553x7AEsq5xUH68Rv9eX  cryptonite-0.21-HrdKDcMPHtdIepdDb5HofB  data-default-class-0.1.2.0-FYQpjIylblBDctdkHAFeXA  dlist-0.8.0.2-GWAMmbX9rLg3tqrbOizHGv  exceptions-0.8.3-7py7fmRxowDFpHmiHGKrTb  foundation-0.0.2-89YGReVRtRBBWcW0btG0KB  hashable-1.2.5.0-K11OC2HRAN471pd3DIyjZw  hourglass-0.2.10-I8h0J4RSF89FN6CuD9x2Xx  http-client-0.5.5-GNDNbTnqdsaAJHpzdKTuc8  http-client-tls-0.3.3-66YMsfFQk1a6stVufgDkif  http-conduit-2.2.3-FHhGdXrViryGhcbi8AMGZ4  http-types-0.9.1-14erGt9zg5qCH8qY2noD0q  integer-logarithms-1-E6LvTbkhTkGIa6wPB3rtJw  lifted-base-0.2.3.8-KLkd0w1UJqu6nE8oVTTEBy  memory-0.14-But6HaIhd2C3y9F3lVFwDX  mime-types-0.1.0.7-8AlArRPYfYj51vmdMWM7Wh  mmorph-1.0.9-DmSwQqk5nLj7roLAcydGz  monad-control-1.0.1.0-HoNEBoNfniX3vjSfkI7WTT  (+28 more)
app/: Main.hs
src/: Devrant.hs
(+1514 files in other folders)
